--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -197,16 +197,17 @@
         }
     },
     "welcome": {
-        "title": "Добро пожаловать в консоль DH!",
+        "title": "Добро пожаловать в DH!",
         "subtitle": "Ваш мощный инструмент для управления сервером Danheng",
         "important": "Важно: Перед началом",
         "plugin": {
-            "title": "1. Установите необходимый плагин в YourPSPath/Plugins",
+            "title": "1. Установите необходимый плагин в Plugins/",
             "button": "Получить плагин команд DHConsole"
         },
         "updates": {
-            "title": "2. Получите последние обновления",
-            "button": "Посетить репозиторий DHConsole"
+            "title": "2. Используйте DHConsole с Github Pages (или запустите локально)",
+            "hosted": "Использовать размещенную версию",
+            "local": "Запустить локально (репозиторий DHConsole)"
         },
         "docs": {
             "text": "Для получения подробных инструкций по настройке, пожалуйста, посетите",
