--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -152,7 +152,7 @@
         },
         "dialog": {
             "removeConfirm": {
-                "title": "คุณแน่ใจหรือไม่ว่าต้องการลบ {{type}} ที่ไม่ได้ใช้ทั้งหมด?",
+                "title": "คุณแน่ใจหรือไม่ว่าต้องการลบ {{type}} ที่ไม่ได้ใช้ทั้งหมด ?",
                 "content": "สิ่งนี้จะลบ {{type}} ทั้งหมดที่ไม่มีตัวละครใดใช้อยู่ในขณะนี้",
                 "cancel": "ยกเลิก",
                 "confirm": "ยืนยัน"
@@ -201,12 +201,13 @@
         "subtitle": "เครื่องมือที่ทรงพลังสำหรับการจัดการเซิร์ฟเวอร์ Danheng ของคุณ",
         "important": "สำคัญ: ก่อนที่คุณจะเริ่ม",
         "plugin": {
-            "title": "1. ติดตั้งปลั๊กอินที่จำเป็นไปยัง YourPSPath/Plugins",
+            "title": "1. ติดตั้งปลั๊กอินที่จำเป็นใน Plugins/",
             "button": "รับปลั๊กอินคำสั่ง DHConsole"
         },
         "updates": {
-            "title": "2. รับการอัปเดตล่าสุด",
-            "button": "เยี่ยมชมที่เก็บ DHConsole"
+            "title": "2. ใช้ DHConsole จาก Github Pages (หรือรันในเครื่อง)",
+            "hosted": "ใช้เวอร์ชันที่โฮสต์",
+            "local": "รันในเครื่อง (ที่เก็บ DHConsole)"
         },
         "docs": {
             "text": "สำหรับคำแนะนำการตั้งค่าโดยละเอียด โปรดเยี่ยมชม",
